correct spacing between yellow boxes on flexbox card

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -117,7 +117,7 @@ section:nth-of-type(3) h3 {
 
 section:nth-of-type(5) {
     /* enter needed declarations here */
-    justify-content: space-around;
+    justify-content: space-evenly;
 
 }
 
